--- a/SkyDreaming/SkyDreaming.csproj
+++ b/SkyDreaming/SkyDreaming.csproj
@@ -137,6 +137,7 @@
     <Compile Include="Models\Enums\HairColor.cs" />
     <Compile Include="Models\Room.cs" />
     <Compile Include="Mycontext\ApplicationContext.cs" />
+    <Compile Include="Mycontext\Initializers\MockupDbInitializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\RoomRepository.cs" />
     <Compile Include="Repositories\AngelRepository.cs" />
@@ -163,6 +164,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="How to Crud 101.txt" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
