--- a/SkyDreaming/SkyDreaming.csproj
+++ b/SkyDreaming/SkyDreaming.csproj
@@ -134,7 +134,9 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Angel.cs" />
+    <Compile Include="Models\CustomValidations\MyValidationMethods.cs" />
     <Compile Include="Models\Enums\HairColor.cs" />
+    <Compile Include="Models\Queries\AngelSearchQuery.cs" />
     <Compile Include="Models\Room.cs" />
     <Compile Include="Mycontext\ApplicationContext.cs" />
     <Compile Include="Mycontext\Initializers\MockupDbInitializer.cs" />
