--- a/SkyDreaming/Web.config
+++ b/SkyDreaming/Web.config
@@ -67,6 +67,6 @@
     </defaultConnectionFactory>
   </entityFramework>
   <connectionStrings>
-    <add name="Sindesmos" connectionString="Data Source=DESKTOP-G8HPF1S;Initial Catalog=Angels;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
+    <add name="Sindesmos" connectionString="Data Source=DESKTOP-G8HPF1S;Initial Catalog=IGmodels;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
