--- a/SkyDreaming/SkyDreaming.csproj
+++ b/SkyDreaming/SkyDreaming.csproj
@@ -126,23 +126,23 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Controllers\AngelController.cs" />
+    <Compile Include="Controllers\IGmodelController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\RoomController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\Angel.cs" />
+    <Compile Include="Models\IGmodel.cs" />
     <Compile Include="Models\CustomValidations\MyValidationMethods.cs" />
     <Compile Include="Models\Enums\HairColor.cs" />
-    <Compile Include="Models\Queries\AngelSearchQuery.cs" />
+    <Compile Include="Models\Queries\IGmodelSearchQuery.cs" />
     <Compile Include="Models\Room.cs" />
     <Compile Include="Mycontext\ApplicationContext.cs" />
     <Compile Include="Mycontext\Initializers\MockupDbInitializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\RoomRepository.cs" />
-    <Compile Include="Repositories\AngelRepository.cs" />
+    <Compile Include="Repositories\IGmodelRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -181,11 +181,11 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Angel\Index.cshtml" />
+    <Content Include="Views\IGmodel\Index.cshtml" />
     <Content Include="Views\Room\Index.cshtml" />
-    <Content Include="Views\Angel\Details.cshtml" />
-    <Content Include="Views\Angel\Create.cshtml" />
-    <Content Include="Views\Angel\Edit.cshtml" />
+    <Content Include="Views\IGmodel\Details.cshtml" />
+    <Content Include="Views\IGmodel\Create.cshtml" />
+    <Content Include="Views\IGmodel\Edit.cshtml" />
     <Content Include="Views\Room\Create.cshtml" />
     <Content Include="Views\Room\Delete.cshtml" />
     <Content Include="Views\Room\Details.cshtml" />
